--- a/apps/web/src/locales/br.json
+++ b/apps/web/src/locales/br.json
@@ -4,6 +4,7 @@
     "messages": "Mensagens",
     "songs": "Canções",
     "books": "Livros",
+    "revelation": "Apocalipse",
     "about": "Sobre",
     "contact": "Contato",
     "subtitle": "Ministério",
