--- a/apps/web/src/locales/en.json
+++ b/apps/web/src/locales/en.json
@@ -4,6 +4,7 @@
     "messages": "Messages",
     "songs": "Songs",
     "books": "Books",
+    "revelation": "Revelation",
     "about": "About",
     "contact": "Contact",
     "subtitle": "Ministry",
