About me updated

--- a/apps/web/src/locales/en.json
+++ b/apps/web/src/locales/en.json
@@ -95,9 +95,9 @@
       "godIsLoveScripture": "We love because He first loved us",
       "godIsLoveScriptureRef": "1 John 4:19",
       "content": [
-        "Embracing the Christian faith is both a profound privilege and a weighty responsibility – a chance to radiate Jesus in our daily lives. I've been living these truths since I dedicated my life to Christ over 36+ years. That's a lot of seasons, trials and tests, and one continuous holy journey.",
+        "Embracing the Christian faith is both a profound privilege and a weighty responsibility – a chance to radiate Jesus in our daily lives. I've been living these truths since I dedicated my life to Christ over 36+ years. That's a lot of seasons, trials and tests, in this journey toward heaven.",
         "Partnering with God, these seasons are ordinary yet may I reflect on my journey with overwhelming gratitude for His transformative work. Looking to the future, I'm filled with hope, anticipating God's unfolding blessings for me and my beautiful family.",
-        "My life's path led me to Brazil and New Zealand with my beloved wife, Jackie. Together, we're centered in our Christian faith despite various career paths from civil engineering to entrepreneurial ventures in import and export in countries like Brazil and Argentina to IT consulting.",
+        "By God's grace, my life's path has led me to be honored with a Master's in Theology and the privilege of witnessing hundreds of baptisms. Yet the greatest gift from heaven has been meeting my beloved wife, Jackie, who serves our community as a doctor, helping people achieve better health and quality of life. Together, we remain centered in our Christian faith through various career paths—from Computer Science to entrepreneurial ventures around the world.",
         "Following Jesus's command in Matthew 28:19-20, we're committed to spreading the gospel and living committed to the promise to be with us always.",
         "As Theodore Roosevelt wisely said, \"People don't care how much you know until they know how much you care.\" My aspiration is to embody my gratitude consistently to honor Jesus with excellence.",
         "In summation, I declare, \"God is love\" (1 John 4:8). My unwavering commitment is to share this Good News throughout my life, touching the hearts of all I encounter."
